{
    "name": "InputActions",
    "maps": [
        {
            "name": "CharacterControl",
            "id": "f9d5600b-a2da-4df1-9441-9cc962403f58",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "08e5fa48-8aaa-4025-83c1-3acc09594e63",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pointer1",
                    "type": "Button",
                    "id": "7df80c99-cb0e-4c8b-bbbf-31740b7aa939",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pointer2",
                    "type": "Button",
                    "id": "919c3212-86c4-4cae-b193-41868fe67ab5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "44ce17a2-8d43-4e2e-8f19-6d919855e8b7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5aea0df3-8ca6-4e90-8407-6fd1298973e9",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "659a2df7-adba-4801-a671-0fabe2609856",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a223150b-b2c1-4202-92b4-d67fab2505b7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c6d5ee72-a608-4928-9eb2-a77d6ac7c385",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard And Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7b626e98-a86c-43a7-ab61-829b1b57b49c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pointer1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ed93726-33be-4ae9-ada7-582e9881df1b",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pointer2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "62ac1a59-c9ed-42a4-b834-f680b2596f58",
            "actions": [
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "e0a47f08-56da-44af-ad91-73133bbe6865",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkipDialog",
                    "type": "Button",
                    "id": "a562aabf-274e-4b86-bf7a-f0b376a34c96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpeedUpDialog",
                    "type": "Button",
                    "id": "254225e7-f56f-48ac-ac69-4b37b95381fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ce0182e6-c7f8-485e-af2a-d632958ad7c5",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc92bc6d-4b9e-499a-b909-b3e50b537b54",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "074b7fcb-eb28-4009-a670-325e4af9e141",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d99c6b8a-e55c-4044-84de-eef341b64623",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkipDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53488578-9166-4c08-8963-69ca23dd5705",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUpDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c191153d-d7df-4380-8c44-a5946a8b8a27",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpeedUpDialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard And Mouse",
            "bindingGroup": "Keyboard And Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}